--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "angularfire2": "^5.1.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "firebase": "^5.5.8",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
