--- a/server/dockerfile
+++ b/server/dockerfile
@@ -4,7 +4,6 @@ RUN mkdir /var/opt/roadkill_import
 COPY roadkill_import.rb /var/opt/roadkill_import/roadkill_import.rb
 COPY animal_types.list /var/opt/roadkill_import/animal_types.list
 COPY loop_server.rb /var/opt/roadkill_import/loop_server.rb
-RUN chmod a+x /var/opt/roadkill_import/*.rb ; \ 
-	ln -s /var/opt/roadkill_import/loop_server.rb /usr/local/bin/server
+RUN chmod a+x /var/opt/roadkill_import/*.rb
 
-CMD ["server"]
+CMD ["ruby", "/var/opt/roadkill_import/loop_server.rb"]
